refactor: reescrevi, trazendo as regras de negocio que antes estavam nos controllers para os services, adicionei lombok, e deixei os codigos mais enxutos.