@@ -1,15 +1,15 @@
 package com.weboloja.webloja.service;
 
-import java.util.Arrays;
+import java.util.List;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 
 import com.weboloja.webloja.model.Role;
 import com.weboloja.webloja.model.User;
 import com.weboloja.webloja.repository.RoleRepository;
 import com.weboloja.webloja.repository.UserRepository;
 import org.springframework.stereotype.Service;
+import org.springframework.web.servlet.ModelAndView;
 
 @Service
 @RequiredArgsConstructor
@@ -19,21 +19,23 @@ public class CadastrarService {
 
     private final RoleRepository roleRepository;
 
-	public String cadastrar(String nome, String email, String password) {
-		
-		if(userRepository.findByEmail(email) == null) {
+	public ModelAndView cadastrar(User user) {
+		String menssagem;
+		if(userRepository.findByEmail(user.getEmail()) == null) {
 			
 			Role role = new Role("ROLE_USER");
 
 	        this.roleRepository.save(role);
-	        User user = new User(nome, email, password, Arrays.asList(role));
+			user.setRoles(List.of(role));
 	        userRepository.save(user);
 	        
-	        return "Cadastro efutuado com sucesso!";
+	        menssagem = "Cadastro efutuado com sucesso!";
 		}else {
-			return "Não foi possivel realizar o cadastro, Email já existente.";
+			menssagem = "Não foi possivel realizar o cadastro, Email já existente.";
 		}
 
-		
+		ModelAndView mv = new ModelAndView("cadastrar");
+		mv.addObject("menssagem", menssagem);
+		return mv;
 	}
 }
